test/functional/Sema/minimal_overload_test.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

// Simple overloaded function test
func add(x: Int) -> Int {
    return x;
}

func add(x: Float) -> Float {
    return x;
}

func main() -> Int {
    // This should cause an argument conversion error and show available overloads
    let result = add(true);  // Bool cannot convert to Int or Float
    // CHECK: error: Cannot convert (Bool) -> ? to ?
    // CHECK: note: Available overload: (i32) -> i32
    // CHECK: note: Available overload: (f32) -> f32

    return 0;
}
